# llm-agentic-ai

./: LICENSE  README.md  pyproject.toml  requirements.txt
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/n8n/: Simple Home Automation.json
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
3_crew/coder_agent/: pyproject.toml
3_crew/coder_agent/output/: code_and_output.txt
3_crew/coder_agent/src/coder_agent/: crew.py  main.py
3_crew/community_contributions/stock_picker_emads22/memory/: latest_kickoff_task_outputs.db
3_crew/debate/: pyproject.toml
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate1/: crew.py  main.py
3_crew/debate/src/debate1/config/: tasks.yaml
3_crew/engineer_team/: README.md  pyproject.toml
3_crew/engineer_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/engineer_team/src/engineer_team/: crew.py  main.py
3_crew/engineer_team/src/engineer_team/config/: agents.yaml
3_crew/financial_researcher/: README.md  pyproject.toml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher1/: crew.py  main.py
3_crew/stock_picker/: README.md  pyproject.toml  report.md
3_crew/stock_picker/memory/: chroma.sqlite3  longtermstorage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker/src/test_agent/: crew.py  main.py
3_crew/stock_picker/src/test_agent/config/: tasks.yaml
3_crew/stock_picker/src/test_agent/tools/: push_tool.py
4_langgraph/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  memory.db-shm  memory.db-wal  sidekick_tools.py
4_langgraph/sandbox/: dinner.md
