[project]
name = "coder_agent"
version = "0.1.0"
description = "coder_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<3.12.11"
dependencies = [
    "chromadb==0.5.23",
    "crewai[tools]>=0.108.0,<1.0.0",
    "onnxruntime==1.19.0",
]

[project.scripts]
coder_agent = "coder_agent.main:run"
run_crew = "coder_agent.main:run"
train = "coder_agent.main:train"
replay = "coder_agent.main:replay"
test = "coder_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
